--- a/Laposta/default.mjml
+++ b/Laposta/default.mjml
@@ -95,7 +95,7 @@
           <mj-raw>
             <tr>
               <td class="toc" style="font-size: 20px; font-weight: 400; font-family:Arial; color: #212529; line-height: 32px;">
-                <lp-toc lp-bullet-padding-right="16" lp-bullet-padding-left="1" lp-bullet="images/lp-toc.png" />
+                <lp-toc lp-bullet-padding-right="16" lp-bullet-padding-left="1" lp-bullet="https://jmacare.github.io/mjml/Laposta/assets/lp-toc.png" />
             </tr>
             </td>
           </mj-raw>
