--- a/Laposta/default.mjml
+++ b/Laposta/default.mjml
@@ -13,6 +13,15 @@
     </mj-attributes>
     <mj-style inline="inline"> h1 { font-family: Arial; font-size: 40px; font-weight: 700; line-height: 48px; } h2 { font-family: Arial; font-size: 32px; font-weight: 700; line-height: 38px; } h3 { font-family: Arial; font-size: 28px; font-weight: 700; line-height: 34px; } h4 { font-family: Arial; font-size: 24px; font-weight: 700; line-height: 28px; } h5 { font-family: Arial; font-size: 20px; font-weight: 700; line-height: 24px; } h6 { font-family: Arial; font-size: 16px; font-weight: 700; line-height: 24px; } </mj-style>
     <mj-style> H1, H2, H3, H4, H5, H6 { margin: 0 !important; padding: 0 !important; } a:link, a:-webkit-any-link { color: inherit; } @media screen and (max-width:700px) { .inline-image { display: block !important; float: none !important; max-width: 100% !important; } table[class="lp-image-wrapper"] { width:100% !important; } td[class="lp-image-wrapper-h"] { display: none !important; } td[class="lp-image-wrapper-img"] { display: block !important; width: 100% !important; overflow: auto !important; } img[class="lp-multiline-image"] { width: 100% !important; height: auto !important; margin: 0 !important; } } </mj-style>
+    <mj-style>
+      .lp-toc .lp-toc-bullet {
+        
+      }
+
+      .lp-toc img {
+        height: 24px !important;
+      }
+    </mj-style>
     <mj-breakpoint width="700px" />
   </mj-head>
   <mj-body background-color="#f1eee9" width="700px">
@@ -94,10 +103,10 @@
           </mj-text>
           <mj-raw>
             <tr>
-              <td class="toc" style="font-size: 20px; font-weight: 400; font-family:Arial; color: #212529; line-height: 32px;">
+              <td class="toc" style="font-size: 16px; font-weight: 400; font-family:Arial; color: #212529; line-height: 24px;">
                 <lp-toc lp-bullet-padding-right="16" lp-bullet-padding-left="1" lp-bullet="https://jmacare.github.io/mjml/Laposta/assets/lp-toc.png" />
+              </td>
             </tr>
-            </td>
           </mj-raw>
           <mj-spacer height="24px">
           </mj-spacer>
