--- a/Dictator/default.mjml
+++ b/Dictator/default.mjml
@@ -68,7 +68,7 @@
     <mj-raw>
       <lp-layout>
     </mj-raw>
-    <mj-wrapper full-width="full-width" background-url="images/hero-bg.png" background-size="auto 100%">
+    <mj-wrapper full-width="full-width" background-url="images/hero-bg_light.png" background-size="auto 100%">
       <mj-section full-width="full-width" background-color="#234793" padding="48px 24px 48px 24px">
         <mj-column vertical-align="top">
           <mj-text padding="0px 0px 8px 0px" color="#e84e0f" font-size="28px" font-family="'Mulish',Arial" font-weight="700" line-height="34px" text-transform="uppercase" align="left" text-decoration="none">
