--- a/KED/default.mjml
+++ b/KED/default.mjml
@@ -90,7 +90,7 @@
       <lp-layout lp-label="Hero afbeelding">
     </mj-raw>
     <mj-raw>
-      <img src="./images/I6038_936_79_239_30_297.png" alt="" border="0" width="100%" style="width:100%; max-width:100%; display:block; margin: 0 auto;" lp-edit/>
+      <img src="./images/I6038_936_79_239_30_297.png" alt="" border="0" width="auto" style="width:100%; max-width:100%; display:block; margin: 0 auto;" lp-edit/>
     </mj-raw>
     <mj-raw>
       </lp-layout>
